--- a/5th - Semester/Interação Humano Computador/atividade forms/forms.html
+++ b/5th - Semester/Interação Humano Computador/atividade forms/forms.html
@@ -45,9 +45,9 @@
         <label>Atividades:</label>
         <input type="checkbox" id="treino-leve" name="atividades[]" value="Treino Leve" required>
         <label for="treino-leve">Treino Leve</label>
-        <input type="checkbox" id="aprimoramento" name="atividades[]" value="Aprimoramento" required>
+        <input type="checkbox" id="aprimoramento" name="atividades[]" value="Aprimoramento" >
         <label for="aprimoramento">Aprimoramento</label>
-        <input type="checkbox" id="aula-demo" name="atividades[]" value="Aula Demonstrativa" required>
+        <input type="checkbox" id="aula-demo" name="atividades[]" value="Aula Demonstrativa" >
         <label for="aula-demo">Aula Demonstrativa</label>
         
         <label for="aula-demo">Observações:</label>
